# l-samp-100

./: .gitignore  LICENSE  README.md  angular.json  build-angular.sh  package-lock.json  package.json  quickstart-tauri.sh
.github/workflows/: release.yml
docs/: DESIGN.md
md/: Gemini-Opinion  architectural_philosophy.md  project_analysis.md  technical_schematics.md
src/: index.html  styles.scss
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: audio_engine.rs  main.rs
src/app/: app copy.scss  app.html  app.scss  app.spec.ts  app.ts
src/app/info/: info.spec.ts  info.ts
src/app/services/: audio.spec.ts  audio.ts  tauri-bridge.service.ts
