[package]
name = "lsamp-100"
version = "1.0.0"
description = "Linear Sample Navigation Sincere Framework - Audio Sampler"
authors = ["Chris <chris@liturgy.one>"]
edition = "2021"
rust-version = "1.70"
build = "tauri-build/build.rs"

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2", features = ["devtools"] }
# Optional: global shortcut plugin (uncomment and set correct version when enabling)
# tauri-plugin-global-shortcut = "0.1"
cpal = "0.15"
rdev = "0.5"
symphonia = { version = "0.5", features = ["all"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "5.0"
rfd = "0.17.2"
rodio = "0.17"
hound = "3.5"
log = "0.4"
env_logger = "0.10"
stratum-dsp = "1.0"

[target."cfg(windows)"]
dependencies = {}

[target."cfg(target_os = \"macos\")"]
dependencies = {}

[target."cfg(target_os = \"linux\")"]
dependencies = {}

[lib]
name = "lsamp_100_lib"
path = "src/lib.rs"

[[bin]]
name = "lsamp-100"
path = "src/main.rs"
